--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&family=Shrikhand&display=swap');
 
 @layer base {
   body {
